[package]
name = "peer-node-primitives"
description = "Primitives types for the Node-side"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bounded-vec = "0.6"
futures = "0.3.21"
peer-primitives = { path = "../../primitives" }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
sp-core = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "vne-mainnet" }
sp-application-crypto = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "vne-mainnet" }
sp-consensus-vrf = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "vne-mainnet" }
sp-consensus-babe = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "vne-mainnet" }
sp-keystore = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "vne-mainnet" }
sp-maybe-compressed-blob = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", branch = "vne-mainnet" }
peer-parachain = { path = "../../parachain", default-features = false }
schnorrkel = "0.9.1"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = { version = "0.11.2", default-features = false }

[dev-dependencies]
peer-erasure-coding = { path = "../../erasure-coding" }
