[package]
name = "Peer-Runtime-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-std = { package = "sp-std", git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", default-features = false, branch = "vne-mainnet" }
sp-tracing = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git", default-features = false , branch = "vne-mainnet" }
parity-scale-codec = { version = "3.1.5", default-features = false }
primitives = { package = "peer-primitives", path = "../../primitives", default-features = false }

bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-tracing/std",
    "parity-scale-codec/std",
    "primitives/std",
    "bs58/std"
]
runtime-metrics = ["sp-tracing/with-tracing"]
